Anonymous | Login | 2021-01-18 07:49 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0030747 | Open CASCADE | [OCCT] OCCT:Modeling Algorithms | public | 2019-05-27 16:38 | 2020-09-14 22:53 | ||||||||
Reporter | anv | ||||||||||||
Assigned To | anv | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | assigned | Resolution | open | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 7.3.0 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0030747: Modeling Algorithms - 2d Curves concatenator doesn't properly process closed contours. | ||||||||||||
Description | Method Add from Geom2dConvert_CompCurveToBSplineCurve checks if initial curve is closed and not the resulting one. This at least leads to an incorrect usage of the parameter After. | ||||||||||||
Steps To Reproduce | Not possible | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | |||||||||||||
![]() |
|
(0084666) git (administrator) 2019-05-27 16:42 |
Branch CR30747 has been created by anv. SHA-1: 6e158a5f0492913492f2d1e81b971e75b3dae319 Detailed log of new commits: Author: anv Date: Mon May 27 16:41:16 2019 +0300 0030747: Modeling Algorithms - 2d Curves concatenator doesn't properly process closed contours. Correct processing of closed curves was added to method Geom2dConvert_CompCurveToBSplineCurve::Add |
(0084669) anv (developer) 2019-05-27 16:50 |
Mikhail, I've come across this issue while trying to concatenate two curves that form a full contour. Curve is being added to the end even though parameter After states otherwise. I've fixed it in a similar way it's being proceeded for 3d curves. Please check. |
(0084670) msv (developer) 2019-05-27 16:50 |
Please provide information about the source project and test case. |
(0084671) msv (developer) 2019-05-27 17:37 |
Please test it first. |
(0084928) git (administrator) 2019-06-06 17:23 |
Branch CR30747 has been updated forcibly by anv. SHA-1: 359cd8325a9681c5fcadbfb8f0f208a04c768a4b |
![]() |
|||
Date Modified | Username | Field | Change |
2019-05-27 16:38 | anv | New Issue | |
2019-05-27 16:38 | anv | Assigned To | => anv |
2019-05-27 16:39 | anv | Summary | 2d Curves concatenator doesn't properly process closed contours. => Modeling Algorithms - 2d Curves concatenator doesn't properly process closed contours. |
2019-05-27 16:42 | git | Note Added: 0084666 | |
2019-05-27 16:50 | anv | Note Added: 0084669 | |
2019-05-27 16:50 | anv | Assigned To | anv => msv |
2019-05-27 16:50 | anv | Status | new => resolved |
2019-05-27 16:50 | anv | Steps to Reproduce Updated | View Revisions |
2019-05-27 16:50 | msv | Note Added: 0084670 | |
2019-05-27 17:22 | bugmaster | Project | Internal => Open CASCADE |
2019-05-27 17:37 | msv | Note Added: 0084671 | |
2019-05-27 17:37 | msv | Status | resolved => assigned |
2019-06-06 17:23 | git | Note Added: 0084928 | |
2019-08-12 18:05 | msv | Target Version | 7.4.0 => 7.5.0 |
2019-08-12 18:06 | msv | Assigned To | msv => anv |
2020-09-14 22:53 | msv | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |