0030747: Modeling Algorithms - 2d Curves concatenator doesn't properly process closed contours.

- Correct processing of closed curves was added to method Geom2dConvert_CompCurveToBSplineCurve::Add;
- Default value of After changed to true as it's is a more expected behavior.