src/Geom2dConvert/Geom2dConvert_CompCurveToBSplineCurve.hxx
@@ -49,7 +49,7 @@ public:
   //! Tolerance is used to check continuity and decrease
   //! Multiplicty at the common Knot
   //! After is usefull if BasisCurve is a closed curve .
-  Standard_EXPORT Standard_Boolean Add (const Handle(Geom2d_BoundedCurve)& NewCurve, const Standard_Real Tolerance, const Standard_Boolean After = Standard_False);
+  Standard_EXPORT Standard_Boolean Add (const Handle(Geom2d_BoundedCurve)& NewCurve, const Standard_Real Tolerance, const Standard_Boolean After = Standard_True);
   
   Standard_EXPORT Handle(Geom2d_BSplineCurve) BSplineCurve() const;
   
